Implements an other test

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,3 +20,11 @@
   </form>
 </div>
 <button routerLink="/radio">Radio</button>
+<div>
+  {{ image | default:"http://example.com/default-image.png": true }}
+</div>
+<app-login></app-login>
+
+<div>
+  
+</div>
